35 - Using Redis for storing tokens

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ FLASK_APP =
 FLASK_ENV =
 SQLALCHEMY_DATABASE_URI = 
 SECRET_KEY = 
+REDIS_SERVER_URL=
+MAIL_SERVER=
+MAIL_PORT=
+MAIL_USE_TLS=
+MAIL_USERNAME=
+MAIL_PASSWORD=
